Changelog
=========


1.1.7 (unreleased)
------------------

- Nothing changed yet.


1.1.6 (2012-06-18)
------------------

- Added mimetypes and icons for MS Visio, MS Project and MindManager files
  [lgraf]

- Hide chapter description in izug4.
  [mathias.leimgruber]

- Added styling for the error message view in opengever.
  [phgross]

- Disable the kukit.js in the default profile.
  [phgross]

- Adjust translation (use izug.basetheme domain) and styling for the opengever search template.
  [phgross]


1.1.5 (2012-05-16)
------------------

- Disable line margins of mail bodies display in opengever.
  [phgross]


1.1.4 (2012-05-14)
------------------

- Added zcml condition for ref browser patch.
  [mathias.leimgruber]


1.1.3 (2012-05-14)
------------------

- Book read-mode css / book navigation css.
  [jone]


1.1.2 (2012-05-14)
------------------

- Fix Blog listing in izug3.
  [mathias.leimgruber]

- Customize search form in izug4
  [mathias.leimgruber]

1.1.1 (2012-05-09)
------------------

- Nothing changed yet.


1.1 (2012-05-09)
----------------

- Fix extjs blank image url.
  [jone]

- Change the order of document_actions in document actions viewlet.
  [jone]

- Style all tables in content-core and reset strong (disabled by extjs).
  [jone]

- Add colorization with environment variable (izug_basetheme_colorization).
  [jone]

- Add mime type for DOCX and PPTX documents
  [eschmutz]

- Added izug4 specific css
  [mathias.leimgruber]

- Added izug4 profile
  [mathias.leimgruber]

- Custom navigation: indent first child nodes properly when navigation top is visible.
  [jone]

- Added CSS to override fonts for ExtJS tables
  [lgraf]

- Added IE9 fix for cut off external editor icon in ExtJS enabled tabbedview
  [lgraf]

- Added IE9 fix for growing content when hovering over ftw table rows
  See http://blog.brianrichards.net/post/6721471926/ie9-hover-bug-workaround
  [lgraf]

- Add fixes for extjs table styles
  [eschmutz]
