@@ -5,7 +5,8 @@ Changelog
 1.1.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Updated Mimetype definition for MS Visio
+  [lgraf]
 
 
 1.1.6 (2012-06-18)
